--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@itsukichan/baileys",
+  "name": "@whiskeysockets/baileys",
   "version": "7.3.2",
   "description": "WhatsApp API Modification By Itsukiichan",
   "keywords": [
